# libBigint

./: .gitignore  CMakeLists.txt  README.md
include/: Bigint.h
sources/: Bigint.cpp
src/: CMakeLists.txt
src/sources/: Bigint.cpp
